--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
 /* change these */
 
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400italic,800italic,400,800");
+@import url("https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet");
 /* @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap'); */
-@import url("https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic");
-
+@import url("'https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100&display=swap'");
 * {
   box-sizing: border-box;
 }
@@ -11,36 +10,24 @@
 /* THIS IS ALL meant for editing. You might want to do it differently, 
 name the variables differently, 
 use the fonts in other ways in the font hierarchy etc. */
-
 /* change these */
+
+
 :root {
-  --bg-color: red;
-  --link-color: green;
-  --link-hover-color: blue;
-  --color-4: hotpink;
-  --color-5: rebeccapurple;
-
-  --primary-font: "Open Sans", sans-serif;
-  --secondary-font: "Droid Serif", serif;
-  --main-text-color: #000;
-
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    137deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(51, 51, 51, 1) 100%);
+  /*--link-color: #d4a074;*/
+  --link-hover-color: #d4a074;
+  --primary-font: "Philosopher", sans-serif;
+  --secondary-font: "Roboto Slab", serif;
+  --main-text-color: #ffffff;
   --white-space: 1rem;
 }
 
-button {
-  transition: all 3s;
-}
-a {
-  transition: all 3s;
-}
-button:hover {
-  background-color: var(--link-hover-color);
-  transform: scale(3) rotate(40deg);
-}
 
-button:active {
-  background-color: var(--bg-color);
-}
 
 a:hover {
   color: var(--link-hover-color);
@@ -71,12 +58,14 @@ footer {
 }
 
 .header-wrapper h1 {
+  font-family: Philosopher; 
   font-size: 3rem;
   text-transform: uppercase;
   letter-spacing: -2px;
   padding-right: 0.75em;
   font-weight: bold;
-  color: white;
+  color: #d4a074;
+  );
 }
 
 .header-wrapper h2 {
@@ -116,111 +105,82 @@ ul {
 }
 
 .swatches li {
-  margin-right: 5vw;
-  height: 15vw;
-  width: 20%;
+  margin-right: 1vw;
+  height: 29vw;
+  width: 30%;
 }
 
 ul li:last-child {
   margin-right: 0;
 }
 
-.color-swatch-1 {
-  background-color: var(--bg-color);
-}
-
 .color-swatch-2 {
-  background-color: var(--link-color);
+  background-color: #d4a074;
 }
 
 .color-swatch-3 {
-  background-color: var(--link-hover-color);
+  background-color: #fcc595;
 }
-
 .color-swatch-4 {
-  background-color: var(--color-4);
+  background-color: white;
 }
 
-.color-swatch-5 {
-  background-color: var(--color-5);
-}
-
-.textures li {
-  height: 30vw;
-  width: 40%;
-  margin-right: 5vw;
-}
-
-.texture-swatch-1 {
-  background: url(../img/pw_maze_white.png) top left repeat;
-}
-
-.texture-swatch-2 {
-  background: url(../img/subtle_grunge.png) top left repeat;
-}
-
-.texture-swatch-1 {
-  background: url(../img/pw_maze_white.png) top left repeat;
-}
-
-.texture-swatch-3 {
-  background: url(../img/white_paperboard.png) top left repeat;
-}
-
-.images ul {
-  flex-direction: column;
-  text-align: center;
-}
-
-.images li {
-  display: block;
-  /*margin-right: 5vw;*/
-  margin-bottom: 1rem;
-}
 
 button {
-  padding: 1rem;
-  border-radius: 4px;
-  background: var(--link-color);
+  padding: 10px 30px;
+  border-radius: 9px;
   text-align: center;
   text-decoration: none;
-  font: bold 1.25em/1 var(--primary-font);
-  letter-spacing: 1px;
-  color: white;
-  text-transform: uppercase;
-  text-shadow: 0px -1px 0px #0374a0;
-  transition: all 0.2s ease;
+  font-family: var(--primary-font);
   cursor: pointer;
   margin: 0 1rem 1rem 0;
 }
+button:hover {
+
+}
+.primary-button {
+ background-color: #d4a074;
+ color: black;
+}
+
+.primary-button:hover {
+  background: transparent;
+  border-color: #d4a074;
+  color: white;
+}
 
 .secondary-button {
-  background: var(--color-5);
+  color: rgb(111, 111, 111);
+  background: transparent;
+  border: none;
+  outline: 0;
 }
 
-button:focus,
-button:active,
-button:focus-within {
-  outline: 0;
-  border-radius: 4px;
+.secondary-button:hover {
+  border-color: #d4a074;
+  color: white;
 }
+
 
 .typography-main {
   color: var(--main-text-color);
 }
 
 .h1-sample {
+  color: #d4a074;
   font-size: 2.4rem;
   font-weight: bold;
 }
 
 .h2-sample {
+  color: white;
   font-family: var(--secondary-font);
   font-style: italic;
   font-size: 1.25rem;
 }
 
 p.typography-sample {
+  color: white;
   font-family: var(--secondary-font);
   line-height: 1.5;
   max-width: 960px;
@@ -245,7 +205,7 @@ a {
 p[class*="font-details-"] {
   margin-top: 0.5rem;
   margin-bottom: calc(2 * var(--white-space));
-  font-size: 0.75rem;
+  font-size: 1.2rem;
   font-family: var(--secondary-font);
   color: #6f6f6f;
 }
@@ -257,10 +217,6 @@ p[class*="font-details-"] {
 
 .adjectives ul {
   flex-direction: column;
-}
-
-footer {
-  font-style: italic;
 }
 
 @media (min-width: 800px) {
